test/langtools/tools/javac/lambda_leftovers/UnderscoreInLambdaTest.out
UnderscoreInLambdaTest.java:15:36: compiler.err.underscore.not.allowed
1 error
